# discord-obsidian-memo-bot

./: .env.development  .env.example  .env.test  .gitignore  .mcp.json  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  cloudbuild.yaml  deploy.sh  docs-index.md  mypy_fix_report.md  pyproject.toml  run_tests.py  service.yaml  test_local_data_system.py  test_note_creation.py  test_simple_note.py  test_vault_structure.py
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql.yml  release.yml
.kiro/specs/discord-obsidian-memo-bot/: design.md  requirements.md  tasks.md
docs/: BRANCH_STRATEGY.md  CHANNEL_MANAGEMENT.md  EASY_SETUP.md  LOCAL_TESTING.md  TROUBLESHOOTING.md  TUTORIAL.md  deployment-guide.md  github-setup-guide.md  setup-guide.md
docs/archive/: DOCUMENTATION-legacy.md  README.md  deployment-guide.md.old
docs/developer/: architecture.md  development-guide.md
docs/operations/: deployment.md  monitoring.md  troubleshooting.md
docs/user/: basic-usage.md  commands-reference.md  examples.md  installation.md  quick-start.md
src/: __init__.py  health_server.py  main.py
src/ai/: __init__.py  gemini_client.py  mock_processor.py  models.py  note_analyzer.py  processor.py  url_processor.py  vector_store.py
src/audio/: __init__.py  models.py  speech_processor.py
src/bot/: __init__.py  backup_system.py  channel_config.py  client.py  commands.py  config_manager.py  handlers.py  message_processor.py  mock_client.py  models.py  notification_system.py  review_system.py
src/bot/commands/: __init__.py  basic_commands.py  config_commands.py  stats_commands.py
src/config/: __init__.py  secure_settings.py  settings.py
src/finance/: __init__.py  budget_manager.py  commands.py  expense_manager.py  message_handler.py  models.py  reminder_system.py  report_generator.py  subscription_manager.py
src/garmin/: __init__.py  cache.py  client.py  formatter.py  models.py
src/health_analysis/: __init__.py  analyzer.py  integrator.py  scheduler.py
src/monitoring/: __init__.py  health_server.py
src/obsidian/: __init__.py  daily_integration.py  file_manager.py  github_sync.py  local_data_manager.py  metadata.py  models.py  organizer.py  refactored_file_manager.py  template_system.py  templates.py
src/obsidian/analytics/: __init__.py  vault_statistics.py
src/obsidian/backup/: __init__.py  backup_manager.py
src/obsidian/core/: __init__.py  file_operations.py  vault_manager.py
src/obsidian/search/: __init__.py  note_search.py  search_models.py
src/security/: __init__.py  access_logger.py  secret_manager.py
src/tasks/: __init__.py  commands.py  models.py  reminder_system.py  report_generator.py  schedule_manager.py  task_manager.py
src/utils/: __init__.py  logger.py  mixins.py
test_vault/: .vector_index.json  .vector_index.json.backup
test_vault/00_Inbox/: 2025-08-17-daily_note.md
test_vault/02_DailyNotes/2025/08-August/: 2025-08-11.md  2025-08-12.md  2025-08-13.md  2025-08-14.md  2025-08-15.md  2025-08-16.md  2025-08-17.md
test_vault/99_Meta/Templates/: daily_note.md  idea_note.md  meeting_note.md  message_note_template.md  task_note.md
test_vault_new/99_Meta/Templates/: daily_note_template.md
tests/: __init__.py  test_audio_fallback.py  test_integration.py
tests/integration/: test_advanced_ai.py  test_garmin_integration.py  test_health_analysis.py  test_health_models_only.py  test_url_processor_only.py
tests/unit/: test_ai_processing.py  test_bot.py  test_config.py  test_daily_integration.py  test_message_processor.py  test_obsidian.py  test_template_system.py
